# sstc-rois

./: mkdocs.yml  pyproject.toml
src/sstc_rois/ALN/: SITES_ROI_ALN_p13_p14_h40.geojson  SITES_ROI_ALN_p17_18_h40_ext.geojson  SITES_ROI_ALN_p1_p2_h40_ext.geojson  SITES_ROI_ALN_p3_p4_h40_ext.geojson  SITES_ROI_ALN_p5_6_7_8_h60.geojson  SITES_ROI_ALN_p5_h15.geojson  SITES_ROI_ALN_p6_h15.geojson  SITES_ROI_ALN_p7_h15.geojson  SITES_ROI_ALN_p8_h15.geojson  SITES_ROI_ALN_p9_p10_h40.geojson
